--- a/dopaminator-backend/appsettings.json
+++ b/dopaminator-backend/appsettings.json
@@ -17,5 +17,8 @@
   },
   "Blockchain": {
     "URL": "http://localhost:8083"
+  },
+  "Admin": {
+    "GUID": "98084558-ff69-4119-ad4e-09abdc1b0240"
   }
 }
